# pda

./: .env  commands.txt  docker-compose.yml  manage.py  passenger_wsgi.py  pyproject.toml  query.txt  requirements.txt
api/: serializers.py  urls.py  views.py
app/: admin.py  urls.py
app/Data/: data.py
app/models/: serials.py
app/static/account/css/: style.css
app/static/app/css/: kamadatepicker.min.css  page2.css  warehouse.css
app/static/pwa/: serviceworker.js
app/templates/account/: login_user.html
app/templates/app/: home.html  input_barcode.html  product.html  reportserial.html  serial.html  warehouse.html
app/views/: __init__.py  submit_barcode.py
backend/: .dockerignore  .env  Dockerfile  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/app/: forms.py  utils.py
backend/app/migrations/: 0001_initial.py
backend/app/models/: __init__.py  product.py  product_warehouse.py  warehouse.py
backend/app/templates/: 404.html  main.html
backend/app/views/: home.py  index.py  login_user.py  logout_user.py  product.py  reportserial.py  serial.py  warehouse.py
backend/kernel/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: axios.js
frontend/src/pages/: CountPage.jsx  GuestRoute.js  Home.jsx  Index.jsx  InventoryMenu.jsx  InvertoryReport.jsx  Login.jsx  Logout.jsx  Maintenance.jsx  Product.jsx  ProtectedRoute.js  SerialMovementReport.jsx  SerialSummaryReport.jsx  auth.js
kernel/: settings.py  urls.py
(+5 files in other folders)
